--- a/apps/nestjs/fly.toml
+++ b/apps/nestjs/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'nest-template-api'
+app = 'operate-ad-nest'
 primary_region = 'nrt'
 
 [build]
