--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -2,37 +2,37 @@ name: Deploy to Fly.io
 
 on:
   push:
-    branches: [main]
-  workflow_dispatch:  # 手動実行を可能にする
+    branches:
+      - main  # デプロイをトリガーするブランチ名
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '20'  # 使用するNode.jsのバージョン
 
-      - name: Install root dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
-      - name: Prepare NestJS app
-        working-directory: apps/nestjs
+      - name: Install dependencies
         run: |
-          node -e "const pkg=require('./package.json'); delete pkg.dependencies['@operate-ad/shared']; require('fs').writeFileSync('package.json', JSON.stringify(pkg, null, 2))"
-          cp -r ../../packages/shared/dist ./node_modules/@operate-ad/shared
-          npm install --production
+          npm install
 
-      - name: Setup Flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Build the project
+        run: |
+          npm run build
+
+      - name: Install Fly CLI
+        run: |
+          curl -L https://fly.io/install.sh | sh
+          sudo ln -s ~/.fly/bin/fly /usr/local/bin/fly
 
       - name: Deploy to Fly.io
-        run: flyctl deploy --config apps/nestjs/fly.toml
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        run: |
+          fly deploy --remote-only --app operate-ad-nest
