--- a/apps/nestjs/fly.toml
+++ b/apps/nestjs/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for nest-template-api on 2025-01-27T15:47:28+09:00
+# fly.toml app configuration file generated for operate-ad on 2025-01-29T16:13:01+09:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'operate-ad-nest'
+app = 'operate-ad'
 primary_region = 'nrt'
 
 [build]
@@ -12,9 +12,8 @@ primary_region = 'nrt'
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
 
 [[vm]]
