lintバージョンアップ

--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -5,10 +5,12 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "type": "module",
   "scripts": {
     "build": "nest build",
     "start": "node dist/main",
-    "dev": "nest start --watch"
+    "dev": "nest start --watch",
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -20,6 +22,8 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@types/node": "^20.3.1"
+    "@types/node": "^20.3.1",
+    "eslint": "^9.0.0-alpha.0",
+    "eslint-config-prettier": "^9.1.0"
   }
 }
