--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,17 +9,14 @@
     "./react-internal": "./react-internal.js"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@next/eslint-plugin-next": "^14.1.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-turbo": "^2.3.0",
-    "globals": "^15.12.0",
-    "typescript": "^5.3.3",
-    "typescript-eslint": "^8.15.0"
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-turbo": "^2.3.4",
+    "typescript-eslint": "^8.0.0",
+    "globals": "^15.0.0",
+    "typescript": "^5.3.3"
   }
 }
