--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,16 +11,16 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
-    "lucide-react": "0.456.0",
-    "next-themes": "^0.4.3",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "lucide-react": "^0.358.0",
+    "next": "^15.1.0",
+    "next-themes": "^0.2.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
     "postcss": "^8",
