--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -13,10 +13,13 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^5.0.1",
+    "@prisma/client": "^5.22.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typescript": "^5.1.3"
