--- a/turbo.json
+++ b/turbo.json
@@ -1,26 +1,28 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
+  "globalDependencies": [
+    "**/.env.*local"
+  ],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
+      "outputs": [
+        "dist/**",
+        ".next/**",
+        "!.next/cache/**"
+      ]
     },
     "lint": {
       "dependsOn": ["^lint"],
-      "outputs": [],
-      "inputs": [
-        "**/*.{js,jsx,ts,tsx}",
-        ".eslintrc.*",
-        "eslint.config.*"
-      ]
-    },
-    "lint:fix": {
-      "dependsOn": ["^lint:fix"]
+      "outputs": []
     },
     "dev": {
       "cache": false,
       "persistent": true
     }
-  }
+  },
+  "globalEnv": [
+    "PORT",
+    "AFAD_API_KEY"
+  ]
 }
