--- a/apps/nestjs/Dockerfile
+++ b/apps/nestjs/Dockerfile
@@ -11,6 +11,9 @@ RUN npm install -g @nestjs/cli
 
 # Copy source code
 COPY . .
+COPY prisma ./prisma
+RUN npx prisma generate
+RUN npm run build
 
 # Build application
 RUN npm run build
@@ -22,9 +25,6 @@ WORKDIR /app
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
-
-# package.jsonをオーバーライド
-RUN echo '{"type":"commonjs"}' > ./package.json
 
 EXPOSE 3000
 
