--- a/apps/nestjs/Dockerfile
+++ b/apps/nestjs/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 # Copy package files
 COPY package.json ./
+COPY ../../packages/prisma ./prisma
 
 # Install dependencies
 RUN npm install
@@ -11,7 +12,6 @@ RUN npm install -g @nestjs/cli
 
 # Copy source code
 COPY . .
-COPY prisma ./prisma
 RUN npx prisma generate
 RUN npm run build
 
@@ -25,6 +25,7 @@ WORKDIR /app
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/prisma ./prisma
 
 EXPOSE 3000
 
