--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'apps/nestjs/**'
+      - 'packages/prisma/**'
+      - 'pnpm-lock.yaml'
 
 jobs:
   deploy:
@@ -40,7 +44,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build
-        run: cd apps/nestjs && pnpm build
+        run: pnpm build --filter nestjs
 
       - name: Install Fly CLI
         run: |
@@ -48,8 +52,7 @@ jobs:
           sudo ln -s ~/.fly/bin/fly /usr/local/bin/fly
 
       - name: Deploy to Fly.io
-        working-directory: apps/nestjs
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: |
-          fly deploy --app operate-ad
+          fly deploy --app operate-ad --config apps/nestjs/fly.toml
