--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "nestjs",
+  "name": "operate-ad",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
   "private": true,
-  "license": "UNLICENSED",
-  "type": "module",
   "scripts": {
     "build": "nest build",
-    "start": "node dist/main",
+    "start": "node dist/main.js",
     "dev": "nest start --watch",
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
-    "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^5.0.1",
-    "@prisma/client": "^5.22.0",
+    "@operate-ad/prisma": "workspace:*",
+    "@prisma/client": "^6.3.0",
+    "dotenv": "^16.4.7",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "typescript": "^5.1.3"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20.3.1",
-    "eslint": "^9.0.0-alpha.0",
-    "eslint-config-prettier": "^9.1.0"
+    "@nestjs/cli": "^10.0.0",
+    "@types/node": "^20.x",
+    "eslint": "^9.x",
+    "eslint-config-prettier": "^9.x",
+    "prisma": "^6.3.0",
+    "typescript": "^5.x",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.101"
   }
 }
