--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          node-options: "--experimental-modules"
 
       - uses: pnpm/action-setup@v2
         with:
@@ -42,7 +41,7 @@ jobs:
         run: pnpm run typecheck
 
       - name: Run lint
-        run: NODE_OPTIONS="--experimental-modules" pnpm run lint
+        run: pnpm run lint
 
       - name: Check formatting
         run: pnpm run format:check
