--- a/apps/nestjs/tsconfig.json
+++ b/apps/nestjs/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
+    "strictPropertyInitialization": false,
     "target": "ES2020",
     "lib": ["ES2020"],
     "outDir": "dist",
