--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -23,12 +23,13 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
-    "@types/node": "^22.x",
+    "@playwright/test": "^1.50.1",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.101",
+    "@types/node": "^22.12.0",
     "eslint": "^9.x",
     "eslint-config-prettier": "^9.x",
     "prisma": "^6.3.0",
-    "typescript": "^5.x",
-    "@swc/cli": "^0.1.63",
-    "@swc/core": "^1.3.101"
+    "typescript": "^5.x"
   }
 }
