--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -8,5 +8,5 @@
     }
   },
   "include": ["."],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests/", "playwright.config.ts", "playwright-report"]
 }
