ディレクトリ構造の変更、エイリアスの使用

--- a/apps/nestjs/tsconfig.json
+++ b/apps/nestjs/tsconfig.json
@@ -10,7 +10,11 @@
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "types": ["node"]
+    "types": ["node"],
+    "baseUrl": "./",
+    "paths": {
+      "@prismaService": ["src/prisma/prisma.service"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
