--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   typecheck:
@@ -19,7 +19,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: '9.12.3'
+          version: "9.12.3"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -39,7 +39,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: '9.12.3'
+          version: "9.12.3"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -59,7 +59,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: '9.12.3'
+          version: "9.12.3"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
