--- a/turbo.json
+++ b/turbo.json
@@ -1,16 +1,10 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [
-    "**/.env.*local"
-  ],
+  "globalDependencies": ["**/.env.*local"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [
-        "dist/**",
-        ".next/**",
-        "!.next/cache/**"
-      ]
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
     "lint": {
       "dependsOn": ["^lint"],
@@ -21,8 +15,5 @@
       "persistent": true
     }
   },
-  "globalEnv": [
-    "PORT",
-    "AFAD_API_KEY"
-  ]
+  "globalEnv": ["PORT", "AFAD_API_KEY"]
 }
