--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint:fix": "turbo lint -- --fix",
     "typecheck": "pnpm -r run typecheck"
   },
