ハニカム/トライ

--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -17,7 +17,10 @@
     "@nestjs/schedule": "^5.0.1",
     "@operate-ad/prisma": "workspace:*",
     "@prisma/client": "^6.3.0",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.4.7",
+    "iconv-lite": "^0.6.3",
+    "playwright": "^1.50.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
