--- a/apps/nestjs/tsconfig.json
+++ b/apps/nestjs/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "CommonJS",
     "strictPropertyInitialization": false,
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
