--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -18,6 +18,7 @@
     "@operate-ad/prisma": "workspace:*",
     "@prisma/client": "^6.3.0",
     "csv-parse": "^5.6.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "iconv-lite": "^0.6.3",
     "playwright": "^1.50.1",
