媒体側ディレクトリ構成の決定

--- a/apps/nestjs/tsconfig.json
+++ b/apps/nestjs/tsconfig.json
@@ -13,7 +13,12 @@
     "types": ["node"],
     "baseUrl": "./",
     "paths": {
-      "@prismaService": ["src/prisma/prisma.service"]
+      "@prismaService": ["src/prisma/prisma.service"],
+      "@asp/*": ["src/modules/asp/*"],
+      "@discrepany/*": ["src/modules/discrepany-check/*"],
+      "@logs/*": ["src/modules/logs/*"],
+      "@cron/*": ["src/modules/cron/*"],
+      "@common/*": ["src/modules/common/*"]
     }
   },
   "include": ["src/**/*"],
