--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "packageManager": "pnpm@9.12.3",
   "engines": {
     "node": ">=22"
+  },
+  "dependencies": {
+    "date-fns-tz": "^3.2.0"
   }
 }
