--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": ">=22"
   },
   "dependencies": {
-    "date-fns-tz": "^3.2.0"
+    "date-fns-tz": "^3.2.0",
+    "rxjs": "^7.8.1"
   }
 }
