--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -13,6 +13,10 @@
   },
   "devDependencies": {
     "prisma": "^6.3.0",
-    "typescript": "^5.0.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only ./seed.ts"
   }
 }
