--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -17,6 +17,8 @@
     "@nestjs/schedule": "^5.0.1",
     "@operate-ad/prisma": "workspace:*",
     "@prisma/client": "^6.3.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
