Initial commit of decobit-sync project

--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -22,6 +22,8 @@
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "google-auth-library": "^10.1.0",
+    "googleapis": "^153.0.0",
     "iconv-lite": "^0.6.3",
     "playwright": "^1.50.1",
     "reflect-metadata": "^0.2.0",
@@ -37,5 +39,14 @@
     "eslint-config-prettier": "^9.x",
     "prisma": "^6.3.0",
     "typescript": "^5.x"
-  }
+  },
+  "description": "<p align=\"center\">   <a href=\"http://nestjs.com/\" target=\"blank\"><img src=\"https://nestjs.com/img/logo-small.svg\" width=\"120\" alt=\"Nest Logo\" /></a> </p>",
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
