--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "pnpm -r run typecheck"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@workspace/eslint-config": "workspace:*",
@@ -22,7 +23,10 @@
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-turbo": "2",
+    "playwright": "^1.50.1",
     "prettier": "^3.2.5",
+    "prisma": "^6.3.0",
+    "tsconfig-paths": "^4.2.0",
     "turbo": "^2.3.0",
     "typescript": "5.5.4"
   },
@@ -31,6 +35,7 @@
     "node": ">=22"
   },
   "dependencies": {
+    "@prisma/client": "^6.3.0",
     "date-fns-tz": "^3.2.0",
     "rxjs": "^7.8.1"
   }
