--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@prisma/client": "^6.3.0",
     "date-fns-tz": "^3.2.0",
+    "googleapis": "^153.0.0",
     "rxjs": "^7.8.1"
   }
 }
